--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -326,7 +326,7 @@
     {
       "cell_type": "code",
       "source": [
-        "number = 0\n",
+        "number = \"\"\n",
         "secret_number = 48\n",
         "while number != secret_number:\n",
         "    number = int(input(\"Ingrese un número aleatorio entre 1 y 100: \"))\n",
@@ -336,7 +336,7 @@
         "      print(\"El número ingresado es menor que el número secreto\")\n",
         "    else:\n",
         "      print(\"Felicidades, Adivinaste el número secreto\")\n",
-        "\n"
+        "      break\n"
       ],
       "metadata": {
         "id": "GDOB2-oBJowQ",
@@ -429,10 +429,24 @@
         "    # Bloque de código a ejecutar por cada elemento\n"
       ],
       "metadata": {
-        "id": "fJozmBCYKBOi"
+        "id": "fJozmBCYKBOi",
+        "outputId": "869d10a4-fff6-4ad8-ce9e-d45266f44587",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 106
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "incomplete input (<ipython-input-19-b8362a9bd4bd>, line 2)",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-19-b8362a9bd4bd>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    # Bloque de código a ejecutar por cada elemento\u001b[0m\n\u001b[0m                                                   ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m incomplete input\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -449,13 +463,39 @@
         "frutas = ['manzana', 'banana', 'cereza']\n",
         "\n",
         "for fruta in frutas:\n",
-        "    print(fruta)\n"
+        "    print(fruta)\n",
+        "\n",
+        "\n"
       ],
       "metadata": {
-        "id": "b_51Ng0_MsTb"
+        "id": "b_51Ng0_MsTb",
+        "outputId": "33a21a28-7abb-4d54-dc1b-f3c9e37ae2e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "manzana\n",
+            "banana\n",
+            "cereza\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "str"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 24
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -464,10 +504,25 @@
         "type(my_list)"
       ],
       "metadata": {
-        "id": "1vIYeeCbOChm"
+        "id": "1vIYeeCbOChm",
+        "outputId": "7b3e255f-1020-494d-d242-3721b94b53ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "list"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -488,10 +543,27 @@
         "    print(letra)\n"
       ],
       "metadata": {
-        "id": "-_Kju3etN96C"
+        "id": "-_Kju3etN96C",
+        "outputId": "812500d1-5e84-4eef-93ea-51e69f47a846",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "P\n",
+            "y\n",
+            "t\n",
+            "h\n",
+            "o\n",
+            "n\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -501,7 +573,7 @@
       "metadata": {
         "id": "fwgy4gYLOtUX"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -532,10 +604,32 @@
         "  print(x)"
       ],
       "metadata": {
-        "id": "owZzmkw4OqMU"
+        "id": "owZzmkw4OqMU",
+        "outputId": "e9554e17-fbd8-4a38-f8cd-970e1a7a6237",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -553,10 +647,42 @@
         "  print(x)"
       ],
       "metadata": {
-        "id": "eMzXfuRmPpbT"
+        "id": "eMzXfuRmPpbT",
+        "outputId": "67b03822-be58-4f68-d4a9-995600b121b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "11\n",
+            "12\n",
+            "13\n",
+            "14\n",
+            "15\n",
+            "16\n",
+            "17\n",
+            "18\n",
+            "19\n",
+            "20\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 29
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -574,10 +700,26 @@
         "  print(x)"
       ],
       "metadata": {
-        "id": "1OOlOftOP-59"
+        "id": "1OOlOftOP-59",
+        "outputId": "dcb94303-e29b-4975-ba9a-20b34c375539",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10\n",
+            "15\n",
+            "20\n",
+            "25\n",
+            "30\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -592,12 +734,32 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for y in range(0, 90, 17):\n",
+        "  print(y)"
+      ],
       "metadata": {
-        "id": "Y7zV_O5uQeOb"
+        "id": "Y7zV_O5uQeOb",
+        "outputId": "4c2c787d-18fb-446d-b1dc-a7f8e5152832",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "17\n",
+            "34\n",
+            "51\n",
+            "68\n",
+            "85\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -616,10 +778,31 @@
         "    print(f'5 x {i} = {5 * i}')\n"
       ],
       "metadata": {
-        "id": "YBklfoKqROhD"
+        "id": "YBklfoKqROhD",
+        "outputId": "e789ebe7-267f-4d9b-8af7-b38fc084e611",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -641,12 +824,36 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "for x in range(2, 21, 2):\n",
+        " print(x)"
+      ],
       "metadata": {
-        "id": "2NjC7giqR5rB"
+        "id": "2NjC7giqR5rB",
+        "outputId": "4f756cf1-b82d-44b3-f1ca-f852e2b12754",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -660,12 +867,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "sumatoria = 0\n",
+        "list = [3, 5, 2, 8, 1]\n",
+        "\n",
+        "for number in list:\n",
+        "  sumatoria += number\n",
+        "\n",
+        "print('La suma total es', sumatoria)\n",
+        "\n"
+      ],
       "metadata": {
-        "id": "QgUOl9o4R5-X"
+        "id": "QgUOl9o4R5-X",
+        "outputId": "e1ef3a18-2ea8-42fb-b0ea-68e9224e416c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 40,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La suma total es 19\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
