--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -436,7 +436,7 @@
           "height": 106
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -474,7 +474,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -510,7 +510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -549,7 +549,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -573,7 +573,7 @@
       "metadata": {
         "id": "fwgy4gYLOtUX"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -610,7 +610,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -653,7 +653,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -706,7 +706,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -745,7 +745,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -784,7 +784,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -835,7 +835,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -884,7 +884,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -907,12 +907,73 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "cadena = input(\"Ingrese el texto: \").lower()\n",
+        "cadena"
+      ],
       "metadata": {
-        "id": "nFRZHz13R6O0"
+        "id": "damukdrlN_RU",
+        "outputId": "8414de1d-a881-496c-a216-88d80fce6b1f",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 47,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Ingrese el texto: Hola 45\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'hola 45'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "cadena = input(\"Ingrese el texto: \").lower\n",
+        "contador = 0\n",
+        "\n",
+        "for letra in cadena:\n",
+        "  if letra == \"a\" or letra == \"e\" or letra == \"i\" or letra == \"o\" or letra == \"u\":\n",
+        "    contador += 1\n",
+        "\n",
+        "print('El número de vocales es', contador)\n"
+      ],
+      "metadata": {
+        "id": "nFRZHz13R6O0",
+        "outputId": "84e83d09-794b-404d-fdda-86eef3067340",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el texto: Gustavo\n",
+            "El número de vocales es 3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -926,12 +987,39 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "numero = int(input(\"Usted quiere la tabla de multiplicar del número: \"))\n",
+        "\n",
+        "for i in range(1,11):\n",
+        "  print(f'5 x {i} = {i*numero}')"
+      ],
       "metadata": {
-        "id": "Upm6bcxqR6na"
+        "id": "Upm6bcxqR6na",
+        "outputId": "5cae3167-7cdb-44e5-b888-fdd40364beea",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Usted quiere la tabla de multiplicar del número: 5\n",
+            "5 x 1 = 5\n",
+            "5 x 2 = 10\n",
+            "5 x 3 = 15\n",
+            "5 x 4 = 20\n",
+            "5 x 5 = 25\n",
+            "5 x 6 = 30\n",
+            "5 x 7 = 35\n",
+            "5 x 8 = 40\n",
+            "5 x 9 = 45\n",
+            "5 x 10 = 50\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
