--- a/Laboratorio_2.ipynb
+++ b/Laboratorio_2.ipynb
@@ -919,7 +919,7 @@
           "height": 53
         }
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -963,7 +963,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1000,7 +1000,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1033,12 +1033,33 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "list = [1, 2, 3, 4, 5]\n",
+        "\n",
+        "for i in range(len(list) - 1, -1, -1):\n",
+        "  print(list[i])"
+      ],
       "metadata": {
-        "id": "0mLLKiv4R7VK"
+        "id": "0mLLKiv4R7VK",
+        "outputId": "8ed1735b-e84c-482e-db3d-889b88385af9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "4\n",
+            "3\n",
+            "2\n",
+            "1\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1053,7 +1074,13 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "list = [1, 5, 52, 3, 2, 89]\n",
+        "\n",
+        "for i in list:\n",
+        "  if i > 5:\n",
+        "\n"
+      ],
       "metadata": {
         "id": "sAc382R9R7ur"
       },
