--- a/01_Introduccion_a_Python/02_Estructuras_de_datos.ipynb
+++ b/01_Introduccion_a_Python/02_Estructuras_de_datos.ipynb
@@ -108,6 +108,38 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
+        "my_list = [1, 2, 3, 4, 5, 6, [7, 8, 9], 10, 11, 12]\n",
+        "\n",
+        "print(my_list[-8:-5])\n",
+        "print(my_list[-4])\n",
+        "print(my_list[6][1])\n",
+        "print(my_list[6:10])\n"
+      ],
+      "metadata": {
+        "id": "XLpbqV0IJyiM",
+        "outputId": "1d69e340-6294-468c-bd84-3807e4bc2276",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[3, 4, 5]\n",
+            "[7, 8, 9]\n",
+            "8\n",
+            "[[7, 8, 9], 10, 11, 12]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Crear una lista de frutas\n",
         "frutas = [\"manzana\", \"banana\", \"naranja\", \"uva\", \"pera\"]\n"
       ],
