--- a/01_Introduccion_a_Python/02_Estructuras_de_datos.ipynb
+++ b/01_Introduccion_a_Python/02_Estructuras_de_datos.ipynb
@@ -114,16 +114,16 @@
         "print(my_list[-8:-5])\n",
         "print(my_list[-4])\n",
         "print(my_list[6][1])\n",
-        "print(my_list[6:10])\n"
+        "print(my_list[6:10])"
       ],
       "metadata": {
         "id": "XLpbqV0IJyiM",
-        "outputId": "1d69e340-6294-468c-bd84-3807e4bc2276",
+        "outputId": "07e7f7fe-4a17-4e7f-b51b-6e0fc8d1d363",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": 37,
       "outputs": [
         {
           "output_type": "stream",
@@ -134,6 +134,41 @@
             "8\n",
             "[[7, 8, 9], 10, 11, 12]\n"
           ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 37
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "list_a = ['Python', 'C++', 'R']\n",
+        "list_a.extend(['Kiwi', 'Java', 'Ruby'])\n",
+        "print(list_a)"
+      ],
+      "metadata": {
+        "id": "sBRtq0vRR3RM",
+        "outputId": "0b1eba75-bdc8-401e-d81c-e607042a73b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['Python', 'C++', 'R', 'Kiwi', 'Java', 'Ruby']\n"
+          ]
         }
       ]
     },
@@ -141,21 +176,49 @@
       "cell_type": "code",
       "source": [
         "# Crear una lista de frutas\n",
-        "frutas = [\"manzana\", \"banana\", \"naranja\", \"uva\", \"pera\"]\n"
+        "frutas = [\"manzana\", \"banana\", \"naranja\", \"uva\", \"pera\"]\n",
+        "frutas\n"
       ],
       "metadata": {
-        "id": "_nYyKe_bjHY5"
+        "id": "_nYyKe_bjHY5",
+        "outputId": "ea4362d2-ad8d-4cb5-efec-813363d6d971",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['manzana', 'banana', 'naranja', 'uva', 'pera']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 29,
       "metadata": {
-        "id": "MNGFUaC6hyfi"
+        "id": "MNGFUaC6hyfi",
+        "outputId": "6458520f-95a5-4985-ac3f-6515f43418b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "manzana pera\n"
+          ]
+        }
+      ],
       "source": [
         "\n",
         "# Acceder a elementos individuales\n",
@@ -173,10 +236,45 @@
         "print(frutas)"
       ],
       "metadata": {
-        "id": "hbnOS3lsjdWc"
+        "id": "hbnOS3lsjdWc",
+        "outputId": "2dab2883-93b3-4f46-8f04-62827aa67d06",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['manzana', 'plátano', 'naranja', 'uva', 'pera']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(range(1, 3))"
+      ],
+      "metadata": {
+        "id": "sZDCnB6HWXUG",
+        "outputId": "60eeb6cb-10df-4c1b-b2fa-236d6922ff1a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 54,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "range(1, 3)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -196,10 +294,22 @@
         "print(frutas)\n"
       ],
       "metadata": {
-        "id": "yrlpPiGWjol1"
+        "id": "yrlpPiGWjol1",
+        "outputId": "6a925564-e5fd-4da5-d91a-79c35c7e2156",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['manzana', 'plátano', 'mango', 'naranja', 'uva', 'pera', 'kiwi', 'kiwi']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -210,10 +320,22 @@
         "print(frutas)\n"
       ],
       "metadata": {
-        "id": "wx9q6KbWnZ56"
+        "id": "wx9q6KbWnZ56",
+        "outputId": "70fea487-401d-4475-9182-a7998678d450",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['manzana', 'plátano', 'mango', 'naranja', 'uva', 'pera']\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -423,16 +545,58 @@
     {
       "cell_type": "code",
       "source": [
+        "\"Jhon\" + \"Caballero\""
+      ],
+      "metadata": {
+        "id": "1NoRNP79akYt",
+        "outputId": "019ac900-6c49-4565-8ac5-96e3ac36dd8c",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'JhonCaballero'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Crear una lista de cuadrados de los números del 1 al 10\n",
         "cuadrados = [x**2 for x in range(1, 11)]\n",
         "print(cuadrados)\n",
         "\n"
       ],
       "metadata": {
-        "id": "Uu2JI0Ycj7DM"
+        "id": "Uu2JI0Ycj7DM",
+        "outputId": "6fa023bd-6bbe-4c5c-85ce-48ef33bbb99d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 4, 9, 16, 25, 36, 49, 64, 81, 100]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -487,9 +651,42 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "impares = [x for x in range(1, 50) if x % 2 != 0]\n",
+        "print(impares)\n",
+        "\n",
+        "cubos = [x**3 for x in range(1, 11)]\n",
+        "print(cubos)\n",
+        "\n",
+        "palabras = ['casa', 'computadora', 'sol', 'noche', 'luz', 'televisión']\n",
+        "palabras_mayusculas = [x.upper() for x in palabras if len(x) > 4]\n",
+        "print(palabras_mayusculas)\n"
+      ],
+      "metadata": {
+        "id": "jfyhX8FmksPF",
+        "outputId": "015a0262-c359-46f4-f07d-d7a9ff9b7c8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[1, 3, 5, 7, 9, 11, 13, 15, 17, 19, 21, 23, 25, 27, 29, 31, 33, 35, 37, 39, 41, 43, 45, 47, 49]\n",
+            "[1, 8, 27, 64, 125, 216, 343, 512, 729, 1000]\n",
+            "['COMPUTADORA', 'NOCHE', 'TELEVISIÓN']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "jfyhX8FmksPF"
+        "id": "AB4qnLj1ijq9"
       },
       "execution_count": null,
       "outputs": []
