--- a/01_Introduccion_a_Python/02_Estructuras_de_datos.ipynb
+++ b/01_Introduccion_a_Python/02_Estructuras_de_datos.ipynb
@@ -155,11 +155,11 @@
         "print(list_a)"
       ],
       "metadata": {
-        "id": "sBRtq0vRR3RM",
-        "outputId": "0b1eba75-bdc8-401e-d81c-e607042a73b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sBRtq0vRR3RM",
+        "outputId": "0b1eba75-bdc8-401e-d81c-e607042a73b7"
       },
       "execution_count": 50,
       "outputs": [
@@ -181,10 +181,10 @@
       ],
       "metadata": {
         "id": "_nYyKe_bjHY5",
-        "outputId": "ea4362d2-ad8d-4cb5-efec-813363d6d971",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "ea4362d2-ad8d-4cb5-efec-813363d6d971"
       },
       "execution_count": 28,
       "outputs": [
@@ -205,10 +205,10 @@
       "execution_count": 29,
       "metadata": {
         "id": "MNGFUaC6hyfi",
-        "outputId": "6458520f-95a5-4985-ac3f-6515f43418b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6458520f-95a5-4985-ac3f-6515f43418b7"
       },
       "outputs": [
         {
@@ -237,10 +237,10 @@
       ],
       "metadata": {
         "id": "hbnOS3lsjdWc",
-        "outputId": "2dab2883-93b3-4f46-8f04-62827aa67d06",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "2dab2883-93b3-4f46-8f04-62827aa67d06"
       },
       "execution_count": 30,
       "outputs": [
@@ -259,11 +259,11 @@
         "print(range(1, 3))"
       ],
       "metadata": {
-        "id": "sZDCnB6HWXUG",
-        "outputId": "60eeb6cb-10df-4c1b-b2fa-236d6922ff1a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "sZDCnB6HWXUG",
+        "outputId": "60eeb6cb-10df-4c1b-b2fa-236d6922ff1a"
       },
       "execution_count": 54,
       "outputs": [
@@ -295,10 +295,10 @@
       ],
       "metadata": {
         "id": "yrlpPiGWjol1",
-        "outputId": "6a925564-e5fd-4da5-d91a-79c35c7e2156",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6a925564-e5fd-4da5-d91a-79c35c7e2156"
       },
       "execution_count": 46,
       "outputs": [
@@ -321,10 +321,10 @@
       ],
       "metadata": {
         "id": "wx9q6KbWnZ56",
-        "outputId": "70fea487-401d-4475-9182-a7998678d450",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "70fea487-401d-4475-9182-a7998678d450"
       },
       "execution_count": 31,
       "outputs": [
@@ -377,6 +377,34 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "source": [
+        "sum"
+      ],
+      "metadata": {
+        "id": "JkSvLY0BkwfI",
+        "outputId": "59a84ed0-664b-462c-afea-5d20f94c5e06",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 141
+        }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "'int' object is not iterable",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-70-081a24b3b685>\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m: 'int' object is not iterable"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "### Ejemplo 1.3: Operaciones numéricas con listas\n",
@@ -411,10 +439,29 @@
         "print(\"Promedio:\", promedio)\n"
       ],
       "metadata": {
-        "id": "kSOIel4Wm8D2"
+        "id": "kSOIel4Wm8D2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a9e53a50-47cd-4cd4-8ee8-990318c7eb11"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mínimo: 0\n",
+            "Máximo: 9\n",
+            "Suma: 45\n",
+            "Mínimo: 1\n",
+            "Máximo: 10\n",
+            "Suma total: 55\n",
+            "Cantidad de elementos: 10\n",
+            "Promedio: 5.5\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -548,12 +595,12 @@
         "\"Jhon\" + \"Caballero\""
       ],
       "metadata": {
-        "id": "1NoRNP79akYt",
-        "outputId": "019ac900-6c49-4565-8ac5-96e3ac36dd8c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 36
-        }
+        },
+        "id": "1NoRNP79akYt",
+        "outputId": "019ac900-6c49-4565-8ac5-96e3ac36dd8c"
       },
       "execution_count": 56,
       "outputs": [
@@ -582,10 +629,10 @@
       ],
       "metadata": {
         "id": "Uu2JI0Ycj7DM",
-        "outputId": "6fa023bd-6bbe-4c5c-85ce-48ef33bbb99d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "6fa023bd-6bbe-4c5c-85ce-48ef33bbb99d"
       },
       "execution_count": 55,
       "outputs": [
@@ -664,10 +711,10 @@
       ],
       "metadata": {
         "id": "jfyhX8FmksPF",
-        "outputId": "015a0262-c359-46f4-f07d-d7a9ff9b7c8b",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "015a0262-c359-46f4-f07d-d7a9ff9b7c8b"
       },
       "execution_count": 67,
       "outputs": [
