--- a/Laboratorio_3.ipynb
+++ b/Laboratorio_3.ipynb
@@ -170,10 +170,22 @@
         "saludo()  # Llamada a la función\n"
       ],
       "metadata": {
-        "id": "v5roj9PzW1rE"
+        "id": "v5roj9PzW1rE",
+        "outputId": "e8f30abc-e403-4f3b-fa60-458f6e58fd5d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "¡Hola, bienvenidos al curso de Python!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -198,6 +210,33 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def saludo_per(nombre):\n",
+        "    \"\"\"Función que saluda a una persona.\"\"\"\n",
+        "    print(f\"Hola, {nombre}! Bienvenido al curso de Física.\")\n",
+        "\n",
+        "saludo_per(\"Gustavo\")"
+      ],
+      "metadata": {
+        "id": "new4ru8p0Xp8",
+        "outputId": "1a3dc15f-1c78-445b-fca4-f1ff441994b7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola, Gustavo! Bienvenido al curso de Física.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -248,10 +287,49 @@
         "print(es_par(7))   # Imprime False\n"
       ],
       "metadata": {
-        "id": "Eu6_s_XPXyIh"
+        "id": "Eu6_s_XPXyIh",
+        "outputId": "68389533-71e0-4407-dd9f-84e26eef3b73",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "range(4)"
+      ],
+      "metadata": {
+        "id": "u1IGtOCA3JfJ",
+        "outputId": "946a11f6-2ac4-4a5d-883a-137b1315505c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "range(0, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 5
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -265,6 +343,7 @@
     {
       "cell_type": "code",
       "source": [
+        "\n",
         "import random\n",
         "\n",
         "def generar_numeros_aleatorios(cantidad, inicio, fin):\n",
@@ -274,13 +353,26 @@
         "        numeros.append(random.randint(inicio, fin))\n",
         "    return numeros\n",
         "\n",
-        "print(generar_numeros_aleatorios(5, 1, 100))\n"
+        "print(generar_numeros_aleatorios(5, 1, 100))\n",
+        "\n"
       ],
       "metadata": {
-        "id": "_GIe8-I_X7ZY"
+        "id": "_GIe8-I_X7ZY",
+        "outputId": "c3967d8e-5061-499c-ae0f-e4093ad185e3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[17, 7, 72, 96, 82]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -309,12 +401,47 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "import math\n",
+        "\n",
+        "def distancia_euclidiana(punto1, punto2):\n",
+        "    \"\"\"Calcula la distancia euclidiana entre dos puntos.\"\"\"\n",
+        "    x1, y1 = punto1\n",
+        "    x2, y2 = punto2\n",
+        "    distancia = math.sqrt((x2 - x1)**2 + (y2 - y1)**2)\n",
+        "    return distancia\n"
+      ],
       "metadata": {
-        "id": "M08dwqpTYLCk"
+        "id": "vqlilwDD5Xq4"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distancia_euclidiana((0, 0), (3, 4))"
+      ],
+      "metadata": {
+        "id": "M08dwqpTYLCk",
+        "outputId": "891db977-44da-43de-e407-f2cec43ff51c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5.0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 25
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -331,12 +458,46 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "\n",
+        "def romano_a_entero(romano):\n",
+        "    # Diccionario de valores de números romanos\n",
+        "    valores = {'I': 1, 'V': 5, 'X': 10, 'L': 50, 'C': 100, 'D': 500, 'M': 1000}\n",
+        "\n",
+        "    # Variable para almacenar el resultado\n",
+        "    entero = 0\n",
+        "\n",
+        "    # Recorre cada símbolo en la cadena romana\n",
+        "    for i in range(len(romano)):\n",
+        "        # Si el valor actual es menor que el siguiente, réstalo\n",
+        "        if i < len(romano) - 1 and valores[romano[i]] < valores[romano[i + 1]]:\n",
+        "            entero -= valores[romano[i]]\n",
+        "        else:\n",
+        "            # En caso contrario, súmalo\n",
+        "            entero += valores[romano[i]]\n",
+        "\n",
+        "    return entero\n"
+      ],
       "metadata": {
-        "id": "FkYoXQEWYYtS"
+        "id": "FkYoXQEWYYtS",
+        "outputId": "c93be40a-184c-413d-bd4b-95061c8c9d18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "29"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 43
+        }
+      ]
     },
     {
       "cell_type": "markdown",
